# drf

./: Procfile  TODO  conftest.py  manage.py  pyproject.toml  requirements.txt  test
.github/workflows/: CI.yaml
apps/: models.py  serializers.py  tests.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_category_name_product_name.py  0003_product_price.py
learn_drf/: asgi.py  settings.py  urls.py  wsgi.py
root/: settings.py
